# MiCoNE-pipeline-paper

./: .editorconfig  .gitignore  .latexmkrc  README.md  data_transfer.sh  diff.tex  figure_transfer.sh  figures.tex  main.tex  manuscript.tex
scripts/: data_extraction.py  env.yml  post_install.sh  pyproject.toml  run_figure_script.sh
scripts/data_extraction/: data_extraction.py  extract_figure2_data.py  extract_figure3_data.py  extract_figure4_data.py  extract_figure5_data.py  extract_figure6_data.py  extract_figure7_data.py  extract_figure_s3_data.py  extract_figure_s4_data.py  extract_figures_data.sh
scripts/data_processing/: process_figures_data.sh
scripts/figure2/: cca.org  cca.tex  cca_script.py  figure2_data.py  figure2_mockdata.sh  figure2_plot.R  figure2a_plot.R  figure2b_data.py  figure2b_plot.R
scripts/figure3/: figure3_data.py  figure3_mockdata.sh  figure3_plot.R  figure3ab_data.py  figure3ab_plot.R  figure3cd_plot.R  make_trees.py  move_otus.py  move_trees.py
scripts/figure4/: figure4_data.py  figure4_plot.R  figure4a_plot.R  figure4ab_data.py  figure4b_plot.R  figure4c_data.py  figure4c_plot.R  make_input_taxonomy.py
scripts/figure5/: figure5_copy_observation.py  figure5_data.py  figure5_data_extraction.sh  figure5_plot.R  figure5_process.sh  figure5a_plot.R  figure5bc_plot.R
scripts/figure6/: figure6_copy_observation.py  figure6_data.py  figure6_data_extraction.sh  figure6_plot.R  figure6a_plot.R  figure6b_plot.R  process_data.sh
scripts/figure7/: figure7_copy_observation.py  figure7_data.py  figure7_data_extraction.sh  figure7_plot.R  (+3 more)
(+347 files in other folders)
