[tool.poetry]
name = "micone-scripts"
version = "0.1.0"
description = "Scripts for the MiCoNE paper"
authors = ["Dileep Kishore <k.dileep1994@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.4"
pandas = "^1.3.4"
biom-format = "^2.1.10"
scikit-bio = "^0.5.6"
biopython = "^1.79"
micone = "v0.10.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
jupyter = "^1.0.0"
pylint = "^2.11.1"
black = "^21.10b0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
